--- a/src/app/_hauptKomponente/c-dashboard/c-dashboard.component.html
+++ b/src/app/_hauptKomponente/c-dashboard/c-dashboard.component.html
@@ -126,106 +126,90 @@
                     <th>Nummer</th>
                 </tr>
                 <tr>
-                    <td>Auftrag</td>
-                    <td>Muster AG</td>
-                    <td>AB 20-001</td>
+                    <td><a routerLink="/projekte/auftrag" routerLinkActive="active">Auftrag</a></td>
+                    <td><a routerLink="/projekte/auftrag" routerLinkActive="active">Thomas Brändle</a></td>
+                    <td><a routerLink="/projekte/auftrag" routerLinkActive="active">AB 20-001</a></td>
                 </tr>
                 <tr>
-                    <td>Auftrag</td>
-                    <td>Muster AG</td>
-                    <td>AB 20-001</td>
+                    <td><a routerLink="/projekte/auftrag" routerLinkActive="active">Auftrag</a></td>
+                    <td><a routerLink="/projekte/auftrag" routerLinkActive="active">Thomas Brändle</a></td>
+                    <td><a routerLink="/projekte/auftrag" routerLinkActive="active">AB 20-001</a></td>
                 </tr>
                 <tr>
-                    <td>Auftrag</td>
-                    <td>Muster AG</td>
-                    <td>AB 20-001</td>
+                    <td><a routerLink="/projekte/auftrag" routerLinkActive="active">Auftrag</a></td>
+                    <td><a routerLink="/projekte/auftrag" routerLinkActive="active">Thomas Brändle</a></td>
+                    <td><a routerLink="/projekte/auftrag" routerLinkActive="active">AB 20-001</a></td>
                 </tr>
                 <tr>
-                    <td>Auftrag</td>
-                    <td>Muster AG</td>
-                    <td>AB 20-001</td>
+                    <td><a routerLink="/projekte/auftrag" routerLinkActive="active">Auftrag</a></td>
+                    <td><a routerLink="/projekte/auftrag" routerLinkActive="active">Thomas Brändle</a></td>
+                    <td><a routerLink="/projekte/auftrag" routerLinkActive="active">AB 20-001</a></td>
                 </tr>
                 <tr>
-                    <td>Auftrag</td>
-                    <td>Muster AG</td>
-                    <td>AB 20-001</td>
+                    <td><a routerLink="/projekte/auftrag" routerLinkActive="active">Auftrag</a></td>
+                    <td><a routerLink="/projekte/auftrag" routerLinkActive="active">Thomas Brändle</a></td>
+                    <td><a routerLink="/projekte/auftrag" routerLinkActive="active">AB 20-001</a></td>
                 </tr>
                 <tr>
-                    <td>Auftrag</td>
-                    <td>Muster AG</td>
-                    <td>AB 20-001</td>
+                    <td><a routerLink="/projekte/auftrag" routerLinkActive="active">Auftrag</a></td>
+                    <td><a routerLink="/projekte/auftrag" routerLinkActive="active">Thomas Brändle</a></td>
+                    <td><a routerLink="/projekte/auftrag" routerLinkActive="active">AB 20-001</a></td>
                 </tr>
                 <tr>
-                    <td>Auftrag</td>
-                    <td>Muster AG</td>
-                    <td>AB 20-001</td>
+                    <td><a routerLink="/projekte/auftrag" routerLinkActive="active">Auftrag</a></td>
+                    <td><a routerLink="/projekte/auftrag" routerLinkActive="active">Thomas Brändle</a></td>
+                    <td><a routerLink="/projekte/auftrag" routerLinkActive="active">AB 20-001</a></td>
                 </tr>
                 <tr>
-                    <td>Auftrag</td>
-                    <td>Muster AG</td>
-                    <td>AB 20-001</td>
+                    <td><a routerLink="/projekte/auftrag" routerLinkActive="active">Auftrag</a></td>
+                    <td><a routerLink="/projekte/auftrag" routerLinkActive="active">Thomas Brändle</a></td>
+                    <td><a routerLink="/projekte/auftrag" routerLinkActive="active">AB 20-001</a></td>
                 </tr>
                 <tr>
-                    <td>Auftrag</td>
-                    <td>Muster AG</td>
-                    <td>AB 20-001</td>
+                    <td><a routerLink="/projekte/auftrag" routerLinkActive="active">Auftrag</a></td>
+                    <td><a routerLink="/projekte/auftrag" routerLinkActive="active">Thomas Brändle</a></td>
+                    <td><a routerLink="/projekte/auftrag" routerLinkActive="active">AB 20-001</a></td>
                 </tr>
                 <tr>
-                    <td>Auftrag</td>
-                    <td>Muster AG</td>
-                    <td>AB 20-001</td>
+                    <td><a routerLink="/projekte/auftrag" routerLinkActive="active">Auftrag</a></td>
+                    <td><a routerLink="/projekte/auftrag" routerLinkActive="active">Thomas Brändle</a></td>
+                    <td><a routerLink="/projekte/auftrag" routerLinkActive="active">AB 20-001</a></td>
                 </tr>
                 <tr>
-                    <td>Auftrag</td>
-                    <td>Muster AG</td>
-                    <td>AB 20-001</td>
+                    <td><a routerLink="/projekte/auftrag" routerLinkActive="active">Auftrag</a></td>
+                    <td><a routerLink="/projekte/auftrag" routerLinkActive="active">Thomas Brändle</a></td>
+                    <td><a routerLink="/projekte/auftrag" routerLinkActive="active">AB 20-001</a></td>
                 </tr>
                 <tr>
-                    <td>Auftrag</td>
-                    <td>Muster AG</td>
-                    <td>AB 20-001</td>
+                    <td><a routerLink="/projekte/auftrag" routerLinkActive="active">Auftrag</a></td>
+                    <td><a routerLink="/projekte/auftrag" routerLinkActive="active">Thomas Brändle</a></td>
+                    <td><a routerLink="/projekte/auftrag" routerLinkActive="active">AB 20-001</a></td>
                 </tr>
                 <tr>
-                    <td>Auftrag</td>
-                    <td>Muster AG</td>
-                    <td>AB 20-001</td>
+                    <td><a routerLink="/projekte/auftrag" routerLinkActive="active">Auftrag</a></td>
+                    <td><a routerLink="/projekte/auftrag" routerLinkActive="active">Thomas Brändle</a></td>
+                    <td><a routerLink="/projekte/auftrag" routerLinkActive="active">AB 20-001</a></td>
                 </tr>
                 <tr>
-                    <td>Auftrag</td>
-                    <td>Muster AG</td>
-                    <td>AB 20-001</td>
+                    <td><a routerLink="/projekte/auftrag" routerLinkActive="active">Auftrag</a></td>
+                    <td><a routerLink="/projekte/auftrag" routerLinkActive="active">Thomas Brändle</a></td>
+                    <td><a routerLink="/projekte/auftrag" routerLinkActive="active">AB 20-001</a></td>
                 </tr>
                 <tr>
-                    <td>Auftrag</td>
-                    <td>Muster AG</td>
-                    <td>AB 20-001</td>
+                    <td><a routerLink="/projekte/auftrag" routerLinkActive="active">Auftrag</a></td>
+                    <td><a routerLink="/projekte/auftrag" routerLinkActive="active">Thomas Brändle</a></td>
+                    <td><a routerLink="/projekte/auftrag" routerLinkActive="active">AB 20-001</a></td>
                 </tr>
                 <tr>
-                    <td>Auftrag</td>
-                    <td>Muster AG</td>
-                    <td>AB 20-001</td>
+                    <td><a routerLink="/projekte/auftrag" routerLinkActive="active">Auftrag</a></td>
+                    <td><a routerLink="/projekte/auftrag" routerLinkActive="active">Thomas Brändle</a></td>
+                    <td><a routerLink="/projekte/auftrag" routerLinkActive="active">AB 20-001</a></td>
                 </tr>
                 <tr>
-                    <td>Auftrag</td>
-                    <td>Muster AG</td>
-                    <td>AB 20-001</td>
+                    <td><a routerLink="/projekte/auftrag" routerLinkActive="active">Auftrag</a></td>
+                    <td><a routerLink="/projekte/auftrag" routerLinkActive="active">Thomas Brändle</a></td>
+                    <td><a routerLink="/projekte/auftrag" routerLinkActive="active">AB 20-001</a></td>
                 </tr>
-                <tr>
-                    <td>Auftrag</td>
-                    <td>Muster AG</td>
-                    <td>AB 20-001</td>
-                </tr>
-                <tr>
-                    <td>Auftrag</td>
-                    <td>Muster AG</td>
-                    <td>AB 20-001</td>
-                </tr>
-                <tr>
-                    <td>Auftrag</td>
-                    <td>Muster AG</td>
-                    <td>AB 20-001</td>
-                </tr>
-
             </table>
         </div>
     </div>
