--- a/src/app/_hauptKomponente/e-auftrag/e-auftrag.component.html
+++ b/src/app/_hauptKomponente/e-auftrag/e-auftrag.component.html
@@ -68,13 +68,350 @@
         </div>
     </div>
     <div class="fiveML window">
-
+        <div class="kosten">
+            <div class="windowTitle windowHeader">
+                <p>Kosten</p>
+            </div>
+            <div class="btnErfassen">
+                <button type="button" class="btnErfassen">Kosten Erfassen</button>
+            </div>
+            <div class="kostenContent">
+                <div class="kostenBalken">
+                    <div class="balkenBudget">
+                        <p>CHF 3'500.15.-</p>
+                    </div>
+                    <div class="balkenRegie">
+                        <p>CHF 150.00.-</p>
+                    </div>
+                    <div class="balkenAusgaben">
+                        <p>CHF 2'010.00.-</p>
+                    </div>
+                    <div class="balkenErtrag">
+                        <p>CHF 1'320.00.-</p>
+                    </div>
+                    <div class="margeBeschrieb">
+                        <p>Marge:</p>
+                    </div>
+                </div>
+                <div class="kostenBeschrieb">
+                    <div class="beschrieb">
+                        <p>Budget</p>
+                    </div>
+                    <div class="beschrieb">
+                        <p>Regie</p>
+                    </div>
+                    <div class="beschrieb">
+                        <p>Ausgaben</p>
+                    </div>
+                    <div class="beschrieb">
+                        <p>Ertrag</p>
+                    </div>
+                    <div class="margeMenge">
+                        <p>43%</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="stunden">
+            <div class="windowTitle windowHeader">
+                <p>Stunden</p>
+            </div>
+            <div class="btnErfassen">
+                <button type="button" class="btnErfassen">Stunden Erfassen</button>
+            </div>
+            <div class="stundenContent">
+                <div class="stundenBalken">
+                    <div class="balkenMA">
+                        <p>Thomas Brändle</p>
+                    </div>
+                    <div class="balkenMA">
+                        <p>Thomas Brändle</p>
+                    </div>
+                    <div class="balkenMA">
+                        <p>Thomas Brändle</p>
+                    </div>
+                    <div class="totalBeschrieb">
+                        <p>Total:</p>
+                    </div>
+                </div>
+                <div class="kostenBeschrieb">
+                    <div class="beschrieb">
+                        <p>66 Stunden</p>
+                    </div>
+                    <div class="beschrieb">
+                        <p>66 Stunden</p>
+                    </div>
+                    <div class="beschrieb">
+                        <p>66 Stunden</p>
+                    </div>
+                    <div class="totalMenge">
+                        <p>120 Stunden</p>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
     <div class="fiveMR window">
+        <div class="windowTitle windowHeader">
+            <p>Meilensteine</p>
+        </div>
+        <div class="btnErfassen meilenstein">
+            <button type="button" class="btnErfassen">Meilenstein Erfassen</button>
+        </div>
+        <div class="windowTable meilensteinTable">
+            <table>
+                <tr>
+                    <th>Nummer</th>
+                    <th>Meilenstein</th>
+                    <th>Bis Datum</th>
+                    <th>Status</th>
+                </tr>
+                <tr>
+                    <td><a routerLink="/">01</a></td>
+                    <td><a routerLink="/">Konzept</a></td>
+                    <td><a routerLink="/">01.03.2022</a></td>
+                    <td><a routerLink="/">Abgeschlossen</a></td>
+                </tr>
+                <tr>
+                    <td><a routerLink="/">01</a></td>
+                    <td><a routerLink="/">Konzept</a></td>
+                    <td><a routerLink="/">01.03.2022</a></td>
+                    <td><a routerLink="/">Abgeschlossen</a></td>
+                </tr>
+                <tr>
+                    <td><a routerLink="/">01</a></td>
+                    <td><a routerLink="/">Konzept</a></td>
+                    <td><a routerLink="/">01.03.2022</a></td>
+                    <td><a routerLink="/">Abgeschlossen</a></td>
+                </tr>
+                <tr>
+                    <td><a routerLink="/">01</a></td>
+                    <td><a routerLink="/">Konzept</a></td>
+                    <td><a routerLink="/">01.03.2022</a></td>
+                    <td><a routerLink="/">Abgeschlossen</a></td>
+                </tr>
+                <tr>
+                    <td><a routerLink="/">01</a></td>
+                    <td><a routerLink="/">Konzept</a></td>
+                    <td><a routerLink="/">01.03.2022</a></td>
+                    <td><a routerLink="/">Abgeschlossen</a></td>
+                </tr>
+                <tr>
+                    <td><a routerLink="/">01</a></td>
+                    <td><a routerLink="/">Konzept</a></td>
+                    <td><a routerLink="/">01.03.2022</a></td>
+                    <td><a routerLink="/">Abgeschlossen</a></td>
+                </tr>
+                <tr>
+                    <td><a routerLink="/">01</a></td>
+                    <td><a routerLink="/">Konzept</a></td>
+                    <td><a routerLink="/">01.03.2022</a></td>
+                    <td><a routerLink="/">Abgeschlossen</a></td>
+                </tr>
+                <tr>
+                    <td><a routerLink="/">01</a></td>
+                    <td><a routerLink="/">Konzept</a></td>
+                    <td><a routerLink="/">01.03.2022</a></td>
+                    <td><a routerLink="/">Abgeschlossen</a></td>
+                </tr>
+                <tr>
+                    <td><a routerLink="/">01</a></td>
+                    <td><a routerLink="/">Konzept</a></td>
+                    <td><a routerLink="/">01.03.2022</a></td>
+                    <td><a routerLink="/">Abgeschlossen</a></td>
+                </tr>
+                <tr>
+                    <td><a routerLink="/">01</a></td>
+                    <td><a routerLink="/">Konzept</a></td>
+                    <td><a routerLink="/">01.03.2022</a></td>
+                    <td><a routerLink="/">Abgeschlossen</a></td>
+                </tr>
+                <tr>
+                    <td><a routerLink="/">01</a></td>
+                    <td><a routerLink="/">Konzept</a></td>
+                    <td><a routerLink="/">01.03.2022</a></td>
+                    <td><a routerLink="/">Abgeschlossen</a></td>
+                </tr>
+                <tr>
+                    <td><a routerLink="/">01</a></td>
+                    <td><a routerLink="/">Konzept</a></td>
+                    <td><a routerLink="/">01.03.2022</a></td>
+                    <td><a routerLink="/">Abgeschlossen</a></td>
+                </tr>
+                <tr>
+                    <td><a routerLink="/">01</a></td>
+                    <td><a routerLink="/">Konzept</a></td>
+                    <td><a routerLink="/">01.03.2022</a></td>
+                    <td><a routerLink="/">Abgeschlossen</a></td>
+                </tr>
+                <tr>
+                    <td><a routerLink="/">01</a></td>
+                    <td><a routerLink="/">Konzept</a></td>
+                    <td><a routerLink="/">01.03.2022</a></td>
+                    <td><a routerLink="/">Abgeschlossen</a></td>
+                </tr>
+                <tr>
+                    <td><a routerLink="/">01</a></td>
+                    <td><a routerLink="/">Konzept</a></td>
+                    <td><a routerLink="/">01.03.2022</a></td>
+                    <td><a routerLink="/">Abgeschlossen</a></td>
+                </tr>
+                <tr>
+                    <td><a routerLink="/">01</a></td>
+                    <td><a routerLink="/">Konzept</a></td>
+                    <td><a routerLink="/">01.03.2022</a></td>
+                    <td><a routerLink="/">Abgeschlossen</a></td>
+                </tr>
+                <tr>
+                    <td><a routerLink="/">01</a></td>
+                    <td><a routerLink="/">Konzept</a></td>
+                    <td><a routerLink="/">01.03.2022</a></td>
+                    <td><a routerLink="/">Abgeschlossen</a></td>
+                </tr>
+                <tr>
+                    <td><a routerLink="/">01</a></td>
+                    <td><a routerLink="/">Konzept</a></td>
+                    <td><a routerLink="/">01.03.2022</a></td>
+                    <td><a routerLink="/">Abgeschlossen</a></td>
+                </tr>
+                <tr>
+                    <td><a routerLink="/">01</a></td>
+                    <td><a routerLink="/">Konzept</a></td>
+                    <td><a routerLink="/">01.03.2022</a></td>
+                    <td><a routerLink="/">Abgeschlossen</a></td>
+                </tr>
+                <tr>
+                    <td><a routerLink="/">01</a></td>
+                    <td><a routerLink="/">Konzept</a></td>
+                    <td><a routerLink="/">01.03.2022</a></td>
+                    <td><a routerLink="/">Abgeschlossen</a></td>
+                </tr>
+                <tr>
+                    <td><a routerLink="/">01</a></td>
+                    <td><a routerLink="/">Konzept</a></td>
+                    <td><a routerLink="/">01.03.2022</a></td>
+                    <td><a routerLink="/">Abgeschlossen</a></td>
+                </tr>
+                <tr>
+                    <td><a routerLink="/">01</a></td>
+                    <td><a routerLink="/">Konzept</a></td>
+                    <td><a routerLink="/">01.03.2022</a></td>
+                    <td><a routerLink="/">Abgeschlossen</a></td>
+                </tr>
+                <tr>
+                    <td><a routerLink="/">01</a></td>
+                    <td><a routerLink="/">Konzept</a></td>
+                    <td><a routerLink="/">01.03.2022</a></td>
+                    <td><a routerLink="/">Abgeschlossen</a></td>
+                </tr>
 
+            </table>
+        </div>
     </div>
     <div class="fiveUnten window">
-
+        <div class="windowTitle windowHeader">
+            <p>Positionen</p>
+        </div>
+        <div class="positionTable">
+            <table>
+                <tr>
+                    <th>Position</th>
+                    <th>Beschreibung</th>
+                    <th>Menge</th>
+                    <th>Einheit</th>
+                    <th>Einzelpreis</th>
+                    <th>Rabatt</th>
+                    <th>Endpreis</th>
+                </tr>
+                <tr>
+                    <td><a routerLink="/">001</a></td>
+                    <td><a routerLink="/">Landingpage<br /> Untertext 1 <br /> Untertext 2</a></td>
+                    <td><a routerLink="/">1</a></td>
+                    <td><a routerLink="/">Pauschal</a></td>
+                    <td><a routerLink="/">CHF 1500.10.-01</a></td>
+                    <td><a routerLink="/">0%</a></td>
+                    <td><a routerLink="/">CHF 1500.10.-</a></td>
+                </tr>
+                <tr>
+                    <td><a routerLink="/">001</a></td>
+                    <td><a routerLink="/">Landingpage<br /> Untertext 1 <br /> Untertext 2</a></td>
+                    <td><a routerLink="/">1</a></td>
+                    <td><a routerLink="/">Pauschal</a></td>
+                    <td><a routerLink="/">CHF 1500.10.-01</a></td>
+                    <td><a routerLink="/">0%</a></td>
+                    <td><a routerLink="/">CHF 1500.10.-</a></td>
+                </tr>
+                <tr>
+                    <td><a routerLink="/">001</a></td>
+                    <td><a routerLink="/">Landingpage<br /> Untertext 1 <br /> Untertext 2</a></td>
+                    <td><a routerLink="/">1</a></td>
+                    <td><a routerLink="/">Pauschal</a></td>
+                    <td><a routerLink="/">CHF 1500.10.-01</a></td>
+                    <td><a routerLink="/">0%</a></td>
+                    <td><a routerLink="/">CHF 1500.10.-</a></td>
+                </tr>
+                <tr>
+                    <td><a routerLink="/">001</a></td>
+                    <td><a routerLink="/">Landingpage<br /> Untertext 1 <br /> Untertext 2</a></td>
+                    <td><a routerLink="/">1</a></td>
+                    <td><a routerLink="/">Pauschal</a></td>
+                    <td><a routerLink="/">CHF 1500.10.-01</a></td>
+                    <td><a routerLink="/">0%</a></td>
+                    <td><a routerLink="/">CHF 1500.10.-</a></td>
+                </tr>
+                <tr>
+                    <td><a routerLink="/">001</a></td>
+                    <td><a routerLink="/">Landingpage<br /> Untertext 1 <br /> Untertext 2</a></td>
+                    <td><a routerLink="/">1</a></td>
+                    <td><a routerLink="/">Pauschal</a></td>
+                    <td><a routerLink="/">CHF 1500.10.-01</a></td>
+                    <td><a routerLink="/">0%</a></td>
+                    <td><a routerLink="/">CHF 1500.10.-</a></td>
+                </tr>
+                <tr>
+                    <td><a routerLink="/">001</a></td>
+                    <td><a routerLink="/">Landingpage<br /> Untertext 1 <br /> Untertext 2</a></td>
+                    <td><a routerLink="/">1</a></td>
+                    <td><a routerLink="/">Pauschal</a></td>
+                    <td><a routerLink="/">CHF 1500.10.-01</a></td>
+                    <td><a routerLink="/">0%</a></td>
+                    <td><a routerLink="/">CHF 1500.10.-</a></td>
+                </tr>
+                <tr class="zwischenSpalte">
+                    <td colspan="7"></td>
+                </tr>
+                <tr class="total">
+                    <td></td>
+                    <td colspan="5">Total vor Steuer</td>
+                    <td>CHF 2'350.00.-</td>
+                </tr>
+                <tr class="total">
+                    <td></td>
+                    <td colspan="5">Steuer</td>
+                    <td>CHF 0.00.-</td>
+                </tr>
+                <tr class="total">
+                    <td></td>
+                    <td colspan="5">Total nach Steuer</td>
+                    <td class="endTotal">CHF 2'350.00.-</td>
+                </tr>
+            </table>
+            <div class="split firstSplit">
+                <div class="btnPositionen">
+                    <p>Position erfassen</p>
+                </div>
+            </div>
+            <div class="split secondSplit">
+                <div class="btnPositionen">
+                    <p>Position entfernen</p>
+                </div>
+            </div>
+            <div class="split thirdSplit">
+                <div class="btnPositionen">
+                    <p>Textposition erfassen</p>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
 
