--- a/src/app/_hauptKomponente/f-angebot/f-angebot.component.html
+++ b/src/app/_hauptKomponente/f-angebot/f-angebot.component.html
@@ -137,9 +137,41 @@
                     <td><a routerLink="/">0%</a></td>
                     <td><a routerLink="/">CHF 1500.10.-</a></td>
                 </tr>
+                <tr class="zwischenSpalte">
+                    <td colspan="7"></td>
+                </tr>
+                <tr class="total">
+                    <td></td>
+                    <td colspan="5">Total vor Steuer</td>
+                    <td>CHF 2'350.00.-</td>
+                </tr>
+                <tr class="total">
+                    <td></td>
+                    <td colspan="5">Steuer</td>
+                    <td>CHF 0.00.-</td>
+                </tr>
+                <tr class="total">
+                    <td></td>
+                    <td colspan="5">Total nach Steuer</td>
+                    <td class="endTotal">CHF 2'350.00.-</td>
+                </tr>
             </table>
+            <div class="split firstSplit">
+                <div class="btnPositionen">
+                    <p>Position erfassen</p>
+                </div>
+            </div>
+            <div class="split secondSplit">
+                <div class="btnPositionen">
+                    <p>Position entfernen</p>
+                </div>
+            </div>
+            <div class="split thirdSplit">
+                <div class="btnPositionen">
+                    <p>Textposition erfassen</p>
+                </div>
+            </div>
         </div>
-
     </div>
 </div>
 
