--- a/src/sass/_window.sass
+++ b/src/sass/_window.sass
@@ -112,6 +112,15 @@ $fixLinks: calc(calc(calc(100vw - 1300px) / 2) + 115px)
     margin-right: 20px
 
 /* ### Fünf Teilig ### */
+.fiveMR
+    overflow-y: scroll
+    overflow-x: hidden
+
+.fiveOben,
+.fiveMR,
+.fiveUnten
+    overflow-x: hidden
+
 .fiveOben,
 .fiveML, 
 .fiveMR,
@@ -122,8 +131,6 @@ $fixLinks: calc(calc(calc(100vw - 1300px) / 2) + 115px)
     border: 1px solid $borderColor
     border-radius: 20px
     margin-top: 5px
-    overflow-y: scroll
-    overflow-x: hidden
 
 .fiveOben
     top: 201px
