--- a/src/app/_hauptKomponente/e-auftrag/e-auftrag.component.sass
+++ b/src/app/_hauptKomponente/e-auftrag/e-auftrag.component.sass
@@ -2,18 +2,27 @@
 @import './src/sass/window'
 @import './src/sass/element'
 
+
+/* Gesamte Seite */    
 .fiveWindow::-webkit-scrollbar 
     width: 0px
 
+.metaIcon img
+    right: 10px
+
+/* Spalten */ 
 .split
     display: inline-block
-    width: 32%
+    width: calc(calc($gesamteBreite - 35px) /3.2)
     margin-top: 10px
     vertical-align: top
 
-.firstSplit,
+.firstSplit
+    margin-right: 10px
+
 .secondSplit
     margin-right: 10px
+    margin-left: 10px
 
 .thirdSplit
     margin-left: 10px
@@ -26,3 +35,74 @@
 
 .dropDown select
     text-align: center
+
+/* Kosten und Stunden */
+.stunden button
+    top: calc(calc(  $zweiTeiligeHoeheUnten / 2 ) + 10px)
+    right: 10px
+
+.btnErfassen
+    right: 10px !important
+
+.kostenContent,
+.stundenContent
+    margin-top: 10px
+    margin-left: 10px
+    margin-right: 5px
+    height: calc(calc($zweiTeiligeHoeheUnten - 100px) /2)
+
+.kostenBalken, 
+.kostenBeschrieb,
+.stundenBalken, 
+.stundenBeschrieb
+    width: auto
+    display: inline-block
+
+.kostenBeschrieb p,
+.stundenBeschrieb p,
+.kostenBalken p, 
+.stundenBalken p
+    text-align: right
+    margin-top: 3px
+    margin-bottom: 3px
+    padding: 3px
+
+.kostenBalken p, 
+.stundenBalken p
+    margin-left: 30px
+    text-align: center
+    color: white
+    border: 1px solid $borderColor
+    border-radius: 8px
+
+.margeBeschrieb p,
+.totalBeschrieb p
+    margin-top: 10px
+    color: black
+    text-align: left
+    border: none
+    
+.kostenBeschrieb,
+.stundenBeschrieb
+    position: absolute
+    right: 10px
+
+.balkenBudget p
+    background-color: $primaryColor
+
+.balkenRegie p
+    background-color: $borderColor
+
+.balkenAusgaben p
+    background-color: $budgetRot
+
+.balkenErtrag p
+    background-color: $infoGruen
+
+.balkenMA p
+    background-color: $primaryColor
+
+
+/* Meilensteine */
+.meilensteinTable
+    margin-right: 10px
