--- a/src/app/_hauptKomponente/f-angebot/f-angebot.component.sass
+++ b/src/app/_hauptKomponente/f-angebot/f-angebot.component.sass
@@ -4,16 +4,20 @@
     
 .split
     display: inline-block
-    width: 32%
+    width: calc(calc($gesamteBreite - 35px) /3.2)
     margin-top: 10px
     vertical-align: top
 
-.firstSplit,
+.firstSplit
+    margin-right: 10px
+
 .secondSplit
     margin-right: 10px
+    margin-left: 10px
 
 .thirdSplit
     margin-left: 10px
+
 
 .split p
     display: inline-block
