--- a/src/app/_hauptKomponente/k-unternehmen/k-unternehmen.component.html
+++ b/src/app/_hauptKomponente/k-unternehmen/k-unternehmen.component.html
@@ -64,7 +64,7 @@
                 <a href="#"><img [src]="search" alt=""></a>
             </div>
             <div class="btnErfassen">
-                <button type="button" class="btnErfassen">Datei Erfassen</button>
+                <button type="button" class="btnErfassen">Mitarbeiter Erfassen</button>
             </div>
         </div>
         <div class="windowTable">
