--- a/src/app/_hauptKomponente/n-projekte/n-projekte.component.html
+++ b/src/app/_hauptKomponente/n-projekte/n-projekte.component.html
@@ -9,7 +9,7 @@
                 <a href="#"><img [src]="search" alt=""></a>
             </div>
             <div class="btnErfassen">
-                <button type="button" class="btnErfassen">Datei Erfassen</button>
+                <button type="button" class="btnErfassen">Projekt Erfassen</button>
             </div>
         </div>
         <div class="windowTable">
