--- a/src/sass/_var.sass
+++ b/src/sass/_var.sass
@@ -4,6 +4,8 @@ $borderColor: #343434
 $tableColor: #e8e8e8
 $backgroundColor: #F5F5F5
 $formFontColor: #707070
+$budgetRot: #b34700
+$infoGruen: #1fbf43
 
 /* Global Fonts */
 $fontRoboto: "Roboto", sans-serif
